# mkVideo

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
scripts/: generate-icons.js
src-tauri/: Cargo.toml  installer_hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AddCollectionDialog.tsx  CollectionList.tsx  LayerPanel.tsx  MainView.tsx  MaskCanvas.tsx  PlayerControls.tsx  RenameCollectionDialog.tsx  SaveTemplateDialog.tsx  Sidebar.tsx  TemplateList.tsx  TitleBar.tsx  VideoList.tsx  VideoPlayer.tsx
src/lib/: AppContext.tsx  PlayerContext.tsx  i18n.tsx  masks.ts  storage.ts  tauri.ts  types.ts
