[package]
name = "mkvideo"
version = "1.0.0"
description = "MarkAVideo - A Windows video player with mask drawing tools"
authors = ["LYOfficial"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mkvideo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-store = "2.1"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
walkdir = "2.5"
mime_guess = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
